--- a/weatherApp/Base.lproj/Main.storyboard
+++ b/weatherApp/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="weatherApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,86 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="XLf-J7-bVu">
+                                <rect key="frame" x="272" y="36" width="57" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="0Xd-NK-LKG"/>
+                                    <constraint firstAttribute="width" constant="57" id="L9I-lJ-6pA"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bP1-C7-4jq">
+                                <rect key="frame" x="175" y="90" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="D4e-n8-aTA"/>
+                                    <constraint firstAttribute="height" constant="30" id="HRH-6Q-ngo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="State" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6J-Cg-bgd">
+                                <rect key="frame" x="175" y="128" width="250" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="31i-QL-JG0"/>
+                                    <constraint firstAttribute="width" constant="250" id="jCZ-so-tYw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PPM-Bp-jLw">
+                                <rect key="frame" x="221" y="242" width="158" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="158" id="6kF-Jm-hvo"/>
+                                    <constraint firstAttribute="height" constant="64" id="bwC-7c-i4h"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="70"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloudy" translatesAutoresizingMaskIntoConstraints="NO" id="xpm-BN-bcy">
+                                <rect key="frame" x="268" y="170" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="B11-uw-G4e"/>
+                                    <constraint firstAttribute="height" constant="64" id="h4V-9A-AsG"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100°/100°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8wc-n8-fMw">
+                                <rect key="frame" x="259" y="325" width="83" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="83" id="Mba-Y7-kUs"/>
+                                    <constraint firstAttribute="height" constant="21" id="gSq-oG-S4y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.74883814102564095" green="0.74883814102564095" blue="0.74883814102564095" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="U6J-Cg-bgd" firstAttribute="top" secondItem="bP1-C7-4jq" secondAttribute="bottom" constant="8" id="0yt-wV-YgW"/>
+                            <constraint firstItem="XLf-J7-bVu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="FUR-Pw-dHp"/>
+                            <constraint firstItem="U6J-Cg-bgd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="McG-Jq-za9"/>
+                            <constraint firstItem="PPM-Bp-jLw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OiL-Zh-x4F"/>
+                            <constraint firstItem="xpm-BN-bcy" firstAttribute="top" secondItem="U6J-Cg-bgd" secondAttribute="bottom" constant="21" id="QJ7-Xe-i4L"/>
+                            <constraint firstItem="PPM-Bp-jLw" firstAttribute="top" secondItem="xpm-BN-bcy" secondAttribute="bottom" constant="8" id="UgC-7I-Zbq"/>
+                            <constraint firstItem="8wc-n8-fMw" firstAttribute="top" secondItem="PPM-Bp-jLw" secondAttribute="bottom" constant="19" id="WS2-6C-cGe"/>
+                            <constraint firstItem="bP1-C7-4jq" firstAttribute="top" secondItem="XLf-J7-bVu" secondAttribute="bottom" constant="8" id="bmW-r5-8Yx"/>
+                            <constraint firstItem="bP1-C7-4jq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dB4-Q8-ZSn"/>
+                            <constraint firstItem="xpm-BN-bcy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="paO-V3-cPn"/>
+                            <constraint firstItem="XLf-J7-bVu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rLf-Z9-inc"/>
+                            <constraint firstItem="8wc-n8-fMw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xy5-CK-tEe"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cloudy" width="64" height="64"/>
+        <image name="location" width="512" height="512"/>
+    </resources>
 </document>
